--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,12 @@
             "email": "21.lucasmessias@gmail.com"
         }
     ],
-    "require": {}
+    "autoload": {
+        "psr-4": {
+            "Core\\": "src/Core"
+        }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
+    }
 }
